tests/parsing/smtlib/v2.6/errors/010_exists_bad_var_1.expected
File "tests/parsing/smtlib/v2.6/errors/010_exists_bad_var_1.smt2", line 2, character 17-18:
2 | (assert (exists (_) true))
                     ^
Error while parsing a term, read the reserved word '_',
      but expected a sorted variable of the form "(var sort)".
